Colaboratory를 통해 생성됨

--- a/matplotlib/matplotlib_1.ipynb
+++ b/matplotlib/matplotlib_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbRk84J871d5ei0K88NfQj",
+      "authorship_tag": "ABX9TyOSOYs4psWebuahdSFFtb5V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,49 +28,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EkDeqyfHYfmW",
-        "outputId": "bfc11419-8a0f-4a65-c42e-7b40ce13339b"
+        "id": "EkDeqyfHYfmW"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "fonts-nanum is already the newest version (20180306-3).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 23 not upgraded.\n",
-            "/usr/share/fonts: caching, new cache contents: 0 fonts, 1 dirs\n",
-            "/usr/share/fonts/truetype: caching, new cache contents: 0 fonts, 3 dirs\n",
-            "/usr/share/fonts/truetype/humor-sans: caching, new cache contents: 1 fonts, 0 dirs\n",
-            "/usr/share/fonts/truetype/liberation: caching, new cache contents: 16 fonts, 0 dirs\n",
-            "/usr/share/fonts/truetype/nanum: caching, new cache contents: 10 fonts, 0 dirs\n",
-            "/usr/local/share/fonts: caching, new cache contents: 0 fonts, 0 dirs\n",
-            "/root/.local/share/fonts: skipping, no such directory\n",
-            "/root/.fonts: skipping, no such directory\n",
-            "/usr/share/fonts/truetype: skipping, looped directory detected\n",
-            "/usr/share/fonts/truetype/humor-sans: skipping, looped directory detected\n",
-            "/usr/share/fonts/truetype/liberation: skipping, looped directory detected\n",
-            "/usr/share/fonts/truetype/nanum: skipping, looped directory detected\n",
-            "/var/cache/fontconfig: cleaning cache directory\n",
-            "/root/.cache/fontconfig: not cleaning non-existent cache directory\n",
-            "/root/.fontconfig: not cleaning non-existent cache directory\n",
-            "fc-cache: succeeded\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "#한글 폰트 적용\n",
+        "#이 코드 실행 후 런타임 다시 실행\n",
+        "\n",
         "!sudo apt-get install -y fonts-nanum\n",
         "!sudo fc-cache -fv\n",
-        "!rm ~/.cache/matplotlib -rf\n",
-        "\n",
-        "#코드 실행 후 런타임 다시 실행"
+        "!rm ~/.cache/matplotlib -rf"
       ]
     },
     {
