--- a/인스타로 제주도 맛집 크롤링/인스타로 제주도 맛집 크롤링.ipynb
+++ b/인스타로 제주도 맛집 크롤링/인스타로 제주도 맛집 크롤링.ipynb
@@ -107,6 +107,7 @@
     "    #좋아요 수\n",
     "    try:\n",
     "        like = soup.select('div._ae2s._ae3v._ae3w > section._ae5m._ae5n._ae5o > div > div > span > a > span > span')[0].text\n",
+    "    #좋아요 수가 '여러명'으로 표시되도록 해놓은 경우의 오류를 피하기 위함\n",
     "    except:\n",
     "        like = 0\n",
     "    #장소정보\n",
@@ -611,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install wordcloud"
+    "!pip install wordcloud"
    ]
   },
   {
@@ -1647,7 +1648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install folium"
+    "!pip install folium"
    ]
   },
   {
