--- a/인스타로 제주도 맛집 크롤링/인스타로 제주도 맛집 크롤링.ipynb
+++ b/인스타로 제주도 맛집 크롤링/인스타로 제주도 맛집 크롤링.ipynb
@@ -30,15 +30,23 @@
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
-    "#page간에 interval을 주기 위한 것\n",
     "import time \n",
     "\n",
     "driver = webdriver.Chrome('/Users/jeonga/Documents/playdata/chromedriver.exe')\n",
+    "driver.get('https://www.instagram.com/accounts/login/')\n",
+    "time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1c7cdbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "word = \"제주도맛집\"\n",
     "url = insta_searching(word)\n",
-    "driver.get(url)\n",
-    "\n",
-    "#이때 뜬 창 닫지 않고 다음코드 실행"
+    "driver.get(url)"
    ]
   },
   {
@@ -50,10 +58,8 @@
    "source": [
     "#첫번째 게시물 선택\n",
     "def select_first(driver):\n",
-    "    #element는 요소 하나, elements는 여러개\n",
     "    first = driver.find_element(By.CLASS_NAME, '_aagu')\n",
     "    first.click()\n",
-    "    #페이지 사이에 3초 대기\n",
     "    time.sleep(3)\n",
     "    \n",
     "select_first(driver)"
@@ -101,13 +107,12 @@
     "    except:\n",
     "        content = ' '\n",
     "    #태그\n",
-    "    tags = re.findall(r'#[^\\s\\<]+', content)\n",
+    "    tags = re.findall(r'#[^\\s#,\\<]+', content)\n",
     "    #날짜정보\n",
     "    date = soup.select('time._aaqe')[0]['datetime'][:10]\n",
     "    #좋아요 수\n",
     "    try:\n",
     "        like = soup.select('div._ae2s._ae3v._ae3w > section._ae5m._ae5n._ae5o > div > div > span > a > span > span')[0].text\n",
-    "    #좋아요 수가 '여러명'으로 표시되도록 해놓은 경우의 오류를 피하기 위함\n",
     "    except:\n",
     "        like = 0\n",
     "    #장소정보\n",
@@ -128,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#다음 페이지로 넘어가게 해주는 함수\n",
+    "#다음 페이지로 넘어가기\n",
     "def move_next(driver):\n",
     "    right = driver.find_element(By.CLASS_NAME, '_aaqg')\n",
     "    right.click()\n",
@@ -184,7 +189,9 @@
     }
    ],
    "source": [
-    "driver = webdriver.Chrome('/Users/jeonga/Documents/playdata/chromedriver.exe')"
+    "driver = webdriver.Chrome('/Users/jeonga/Documents/playdata/chromedriver.exe')\n",
+    "driver.get('https://www.instagram.com/accounts/login/')\n",
+    "time.sleep(2)"
    ]
   },
   {
@@ -194,8 +201,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#word에 수집 원하는 단어 넣어주기\n",
-    "\n",
     "word = \"제주데이트\"\n",
     "url = insta_searching(word)"
    ]
@@ -308,6 +313,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4a0364a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jeju_insta_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "31edbd56",
    "metadata": {},
@@ -327,7 +342,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "raw_total = pd.read_excel('./crawling/crawling_jeju.xlsx')\n",
     "raw_total['tags'][:3]"
    ]
@@ -553,8 +567,6 @@
     }
    ],
    "source": [
-    "#필요없는 단어 정의\n",
-    "\n",
     "STOPWORDS = ['','#일상', '#맞팔', '#먹팔맞팔', '#울산맛집', '#ootd', '#fff', '#먹스타', '#먹스타맞팔', '좋아요반사', '#소통', '#제주포토존', '#먹방', '#먹팔', '#좋아요', '#제주펜션', '#데일리', '#제주숙소', '#팔로우']\n",
     "\n",
     "tag_total_selected = []\n",
@@ -622,7 +634,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud\n",
     "import platform"
    ]
